# backend/src/server.js
@@ -6,7 +6,7 @@ import "./models/index.js";
 
 dotenv.config();
 
-const PORT = process.env.PORT || 5000;
+const PORT = process.env.PORT || 8000;
 
 (async () => {
   await connectDB();
